# agb_font_converter

./: CHANGELOG.md  Cargo.toml  README.md  basic_font.aseprite
.github/workflows/: main.yml
common/: Cargo.toml
common/src/: create.rs  lib.rs
examples/: alphanum_font.aseprite  full_font.aseprite
gba_agb_font_creation_internals/: Cargo.toml
gba_agb_font_creation_internals/src/: lib.rs
gba_agb_font_loader_eb/: Cargo.toml
gba_agb_font_loader_eb/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
src/: edit.rs  main.rs  parsing.rs  update.rs
