[package]
name = "agb_font_converter_eb"
version = "0.1.0"
edition = "2024"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Converter for font format for AGB"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/agb_font_converter"
readme = "README.md"
publish = false

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["png"] }
clap = { version = "4.6.1", features = ["derive","cargo"] }
asefile = "0.3.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false