[package]
name = "gba_agb_font_creation_internals"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
image.workspace = true
asefile.workspace = true