[package]
name = "gba_agb_font_loader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
publish = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
gba_agb_font_creation_internals = { version = "0.6.0", path = "../gba_agb_font_creation_internals" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
gba_agb_font_eb = "0.6.0"